# TCP_SecureChat

./: .gitignore  CMakeLists.txt  README.md
client-side/: CMakeLists.txt  backgroundworker.cpp  backgroundworker.h  cacheemulator.cpp  cacheemulator.h  inputvalidator.cpp  inputvalidator.h  main.cpp  serversocket.cpp  serversocket.h  windowmanager.cpp  windowmanager.h
client-side/elements/: clickable_qlabel.cpp  clickable_qlabel.h
client-side/windows/: iwindow.cpp  iwindow.h  login.cpp  login.h  login.ui  signup.ui
client-side/windows/login/: login.cpp  login.h  login.ui
client-side/windows/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
client-side/windows/signup/: signup.cpp  signup.h  signup.ui
server-side/: CMakeLists.txt  clientsocket.cpp  clientsocket.h  handlerrequest.cpp  handlerrequest.h  listener.cpp  listener.h  main.cpp  myrunnable.cpp  myrunnable.h  requestexecutor.cpp  requesthandler.cpp  requesthandler.h  requestvalidator.cpp  requestvalidator.h
server-side/db/: sqldatabase.cpp  sqldatabase.h
server-side/db/models/: DBModelUser.h  dbmodelchat.h  dbmodelmessage.h
server-side/request/: requestexecutor.cpp  requestexecutor.h  requesthandler.cpp  requesthandler.h  requestvalidator.cpp  requestvalidator.h
services/: CMakeLists.txt  requestmethods.h
services/errors/: ServerErrors.h  clienterrors.h  dberrors.h
services/models/: clientmodelchat.cpp  clientmodelchat.h  clientmodelmessage.cpp  clientmodelmessage.h  clientmodeluser.h  dbmodelchat.h  dbmodelmessage.h  dbmodeluser.h
services/protocol/: requestmethods.cpp  requestmethods.h  statuscodes.cpp  statuscodes.h
services/security/: base64.cpp  security.cpp  security.h
services/types/: ClientTypes.h  IType.h  ServerTypes.cpp  ServerTypes.h  clienttypes.cpp  itype.cpp
